--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - 8080:8080
     environment:
       - SERVER_PORT=8080
-      - SERVER_ECHO="It works as I expects"
+      - SERVER_ECHO="It works as I expected"
     entrypoint:
       - /http-echo
 
