--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,6 @@ workflows:
             - e2e
           filters:
             branches:
-              ignore: /.*/
+              only: master
             tags:
               only: /^v.*/
