Add circleci context config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
       - run:
           name: Deploy to Docker Hub
           command: |
+            echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
             ./bin/build.sh ${CIRCLE_TAG}
 
 workflows:
