--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - run:
           name: Deploy to Docker Hub
           command: |
-            ehco $DOCKER_USER
+            echo $DOCKER_USER
             ./bin/build.sh ${CIRCLE_TAG}
 
 workflows:
