--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - run:
           name: Deploy to Docker Hub
           command: |
-            echo $DOCKER_USER
+            echo ${DOCKER_PASSWORD} | base64 --decode | docker login -u $DOCKER_USER --password-stdin
 
 workflows:
   version: 2
