--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
           name: Deploy to Docker Hub
           command: |
             echo ${DOCKER_PASSWORD} | base64 --decode | docker login -u $DOCKER_USER --password-stdin
+            ./bin/build.sh ${CIRCLE_TAG}
 
 workflows:
   version: 2
