--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,11 @@
-version: '3.2'
+version: '3.4'
 
 services:
 
   go: &base
     build:
       context: .
-      dockerfile: Dockerfile-Release
+      target: base
     ports:
       - 8080:8080
     environment:
