--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,9 @@
 version: 2.1
 jobs:
+  
   e2e:
-    machine: true
+    image: ubuntu-1604:201903-01
+    docker_layer_caching: true
     steps:
       - checkout
       - run:
@@ -9,6 +11,7 @@ jobs:
           command: |
             make go
             make e2e
+
   deploy:
     machine: true
     steps:
